--- a/app/assets/stylesheets/pages/_services_index.scss
+++ b/app/assets/stylesheets/pages/_services_index.scss
@@ -1,6 +1,7 @@
 .services-queries {
   border: 2px solid grey;
   margin-bottom: 2em;
+  margin-top: 2em;
   padding: 3em;
   border-radius: 4px;
 }
@@ -18,6 +19,13 @@
   justify-content: space-around;
 }
 
+.filter-button {
+  text-align: center;
+  p {
+    margin-bottom: 0;
+  }
+}
+
 .filter-dog-button,
 .filter-cat-button,
 .filter-kangaroo-button,
@@ -25,13 +33,25 @@
 .filter-ferret-button,
 .filter-snake-button,
 .filter-guinea-pig-button {
-  border: 1px solid black;
-  padding: 1em;
-  border-radius: 4px;
+  border: none;
+  background: inherit;
+  color: #595959;
+
+  i {
+    font-size: 1.8em;
+  }
+
+  &:hover {
+    color: black;
+  }
 }
 
 .btn-selected {
-  background-color: aquamarine;
+  color: black;
+  p {
+    text-decoration: underline;
+    text-underline-offset: .5em;
+  }
 }
 
 .services-content-container {
