--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -14,47 +14,43 @@
     <div class="filter-buttons-container">
       <div class="filter-button">
         <button class="filter-dog-button" data-action="click->filtered-queries#highlight" data-filtered-queries-dog-value="">
-          <i class="fa-solid fa-dog"></i>
+          <%= image_tag "icons/dog.svg", class: "icon" %>
           <p>dog</p>
         </button>
       </div>
       <div class="filter-button">
         <button class="filter-cat-button" data-action="click->filtered-queries#highlight" data-filtered-queries-cat-value="">
-          <i class="fa-solid fa-cat"></i>
+          <%= image_tag "icons/cat.svg", class: "icon" %>
           <p>cat</p>
         </button>
       </div>
       <div class="filter-button">
         <button class="filter-kangaroo-button" data-action="click->filtered-queries#highlight" data-filtered-queries-kangaroo-value="">
-          kang
-          <%# fontawesome_icon %>
+          <%= image_tag "icons/kangaroo.svg", class: "icon" %>
           <p>kangaroo</p>
         </button>
       </div>
       <div class="filter-button">
         <button class="filter-rabbit-button" data-action="click->filtered-queries#highlight" data-filtered-queries-rabbit-value="">
-          rabbit
-          <%# fontawesome_icon %>
+          <%= image_tag "icons/rabbit.svg", class: "icon" %>
           <p>rabbit</p>
         </button>
       </div>
       <div class="filter-button">
         <button class="filter-ferret-button" data-action="click->filtered-queries#highlight" data-filtered-queries-ferret-value="">
-          ferret
-          <%# fontawesome_icon %>
+          <%= image_tag "icons/ferret.svg", class: "icon" %>
           <p>ferret</p>
         </button>
       </div>
       <div class="filter-button">
         <button class="filter-snake-button" data-action="click->filtered-queries#highlight" data-filtered-queries-snake-value="">
-          snake
+          <%= image_tag "icons/snake.svg", class: "icon" %>
           <p>snake</p>
         </button>
       </div>
       <div class="filter-button">
         <button class="filter-guinea-pig-button" data-action="click->filtered-queries#highlight" data-filtered-queries-pig-value="">
-          piggy
-          <%# fontawesome_icon %>
+          <%= image_tag "icons/guinea-pig.svg", class: "icon" %>
           <p>guinea pig</p>
         </button>
       </div>
