--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Services#edit</h1>
-<p>Find me in app/views/services/edit.html.erb</p>
+<%# to do : partial with the new_form %>
+
+<%= simple_form_for(@service) do |f| %>
+  <%= f.input :title %>
+  <%= f.input :description %>
+  <%= f.input :price %>
+  <%= f.input :availabilities %>
+  <%= f.input :address %>
+  <%= f.submit %>
+<% end %>
