--- a/app/views/services/_services.html.erb
+++ b/app/views/services/_services.html.erb
@@ -1,7 +1,7 @@
+<div class="services-container row row-cols-1 row-cols-md-2 g-4" data-filtered-queries-target="services">
 <% services.each do |service| %>
   <div class="col">
     <div class="card" style="position: relative;">
-      <%#= link_to "", service_path(service), class: "card-link-to-service" %>
       <% service.user.photos.each do |photo| %>
         <%= cl_image_tag photo.key, background: 'black', aspect_ratio: '2.0', crop: :crop, class: "card-service-provider-image" %>
       <% end %>
@@ -29,3 +29,9 @@
     </div>
   </div>
 <% end %>
+</div>
+<div style="width: 100%; height: 600px;"
+      data-controller="map"
+      data-map-markers-value="<%= @markers.to_json %>"
+      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
