--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid d-flex align-items-center">
     <!-- Logo linking to Home Page -->
     <a class="navbar-brand" href="/">
-      <%= cl_image_tag("lseu2bjrbliwklobmzmx", alt: "Logo", width: 200, crop: :scale) %>
+      <%= image_tag("logo.png", alt: "Logo", width: 200, crop: :scale) %>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
