--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,3 +2,6 @@
 @import "home";
 @import "services_index";
 @import "services_show";
+@import "services_add";
+@import "sign_up";
+@import "devise";
