--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,26 @@
-<h2>Sign up</h2>
+<div class="signup-container mt-5">
+  <h2 class="text-center mb-4">Sign Up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-signup' }) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :first_name,
-                required: true,
-                autofocus: true %>
-    <%= f.input :last_name,
-                required: true,
-                autofocus: true %>
-    <%= f.input :profile_picture, as: :file %>
-    <%= f.input :address,
-                required: true,
-                autofocus: true %>
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    <div class="form-inputs">
+      <%= f.input :first_name, required: true, autofocus: true, input_html: { class: 'form-control' }, wrapper_html: { class: 'form-group' } %>
+      <%= f.input :last_name, required: true, input_html: { class: 'form-control' }, wrapper_html: { class: 'form-group' } %>
+      <%= f.input :profile_picture, as: :file, input_html: { class: 'form-control-file' }, wrapper_html: { class: 'form-group' } %>
+      <%= f.input :address, required: true, input_html: { class: 'form-control' }, wrapper_html: { class: 'form-group' } %>
+      <%= f.input :email, required: true, input_html: { class: 'form-control', autocomplete: 'email' }, wrapper_html: { class: 'form-group' } %>
+      <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { class: 'form-control', autocomplete: 'new-password' }, wrapper_html: { class: 'form-group' } %>
+      <%= f.input :password_confirmation, required: true, input_html: { class: 'form-control', autocomplete: 'new-password' }, wrapper_html: { class: 'form-group' } %>
+    </div>
+
+    <div class="form-actions text-center">
+      <%= f.button :submit, "Sign up", class: 'btn btn-primary btn-block' %>
+    </div>
+  <% end %>
+
+  <div class="text-center mt-4">
+    <%= render "devise/shared/links" %>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-
-
-<%= render "devise/shared/links" %>
