--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -1,11 +1,21 @@
-<h1>What service do you want to add ?</h1>
-<!-- <p>Find me in app/views/services/new.html.erb</p> -->
+<div class="service-form-container my-5">
+  <h2 class="text-center mb-4">What service do you want to add?</h2>
 
-<%= simple_form_for(@service) do |f| %>
-  <%= f.input :title %>
-  <%= f.input :description %>
-  <%= f.input :price %>
-  <%= f.input :availabilities %>
-  <%= f.input :address %>
-  <%= f.submit %>
-<% end %>
+  <%= simple_form_for(@service, html: { class: 'form-service' }) do |f| %>
+    <div class="form-group">
+      <%= f.input :title, collection: ['Boarding', 'House Sitting', 'Pet Walking', 'Drop-In Visits', 'Pet Grooming', 'Pet Training', 'Veterinary Services', 'Pet Transportation'], prompt: "Select a Service", input_html: { class: 'form-select' } %>
+    </div>
+    <div class="form-group">
+      <%= f.input :description, as: :text, input_html: { class: 'form-control' }, label_html: { class: 'form-label' } %>
+    </div>
+    <div class="form-group">
+      <%= f.input :price, input_html: { class: 'form-control' }, label_html: { class: 'form-label' } %>
+    </div>
+    <div class="form-group">
+      <%= f.input :availabilities, input_html: { class: 'form-control' }, label_html: { class: 'form-label' } %>
+    </div>
+    <div class="form-group">
+      <%= f.button :submit, "Add Service", class: "btn btn-primary btn-block" %>
+    </div>
+  <% end %>
+</div>
